# park-routing

./: .env.example  .gitignore  README.md  docker-compose.yml
PRDs/: prd.md
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  main.rs  openapi.rs  state.rs
backend/src/models/: route.rs
backend/src/routes/: health.rs  mod.rs  navigate.rs
backend/src/services/: cache.rs  mod.rs  navigation.rs  routing.rs
data/: park-road.json  park-routes.geojson
db/init/: 01-extensions.sql  02-schema.sql  03-park-road-seed.sql  03-park-routes-seed.sql  03-sample-network.sql  04-topology.sql  05-crs-gcj02.sql  05-routing-function.sql  06-routing-function.sql  07-navigate-function.sql
scripts/: generate_park_road_seed.py  generate_park_routes_seed.py  reload_park_network.sh  smoke_test.sh
